--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src\assets\Wave Lines.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="src\assets\Wave Lines.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.9" />
+    <meta
+      name="description"
+      content="Welcome to the Water Level Monitoring System! Our system offers data visualization to monitor and manage groundwater levels with precision and ease."
+    />
     <title>Ground Water Level Monitoring System</title>
   </head>
   <body>
